simple video code

--- a/tips.html
+++ b/tips.html
@@ -9,4 +9,12 @@
 
 //use poster to display an image before the video plays //use muted to mute
 audio by default //use loop to replay the video automatically //use controls to
-display video controls (play, pause, volume, etc.)
+display video controls (play, pause, volume, etc.) //Simple video code
+
+<video
+  src="https://cdn.freecodecamp.org/curriculum/labs/what-is-the-map-method-and-how-does-it-work.mp4"
+  controls
+  width="640"
+>
+  <source src="video.mp4" type="video/mp4" />
+</video>
