Added script to tips

--- a/tips.html
+++ b/tips.html
@@ -18,3 +18,11 @@ display video controls (play, pause, volume, etc.) //Simple video code
 >
   <source src="video.mp4" type="video/mp4" />
 </video>
+
+<!--script Element: This element is used to embed executable code.
+Example Code; this will make an alert on the webpage-->
+<body>
+  <script>
+    alert("Congratulations!");
+  </script>
+</body>
