--- a/tips.html
+++ b/tips.html
@@ -26,3 +26,11 @@ Example Code; this will make an alert on the webpage-->
     alert("Congratulations!");
   </script>
 </body>
+
+<!--example of blockquote element-->
+<!--cite attribute is helpful in giving screen readers & search engines more info-->
+
+<blockquote cite="https://www.freecodecamp.org/news/learn-to-code-book/">
+  "Can you imagine what it would be like to be a successful developer? To have
+  built software systems that people rely upon?"
+</blockquote>
