Added Footer tips

--- a/tips.html
+++ b/tips.html
@@ -34,3 +34,15 @@ Example Code; this will make an alert on the webpage-->
   "Can you imagine what it would be like to be a successful developer? To have
   built software systems that people rely upon?"
 </blockquote>
+
+<!--example of using address element & making a phone number & email clickable-->
+
+<footer>
+  <section id="contact">
+    <h2>Contact</h2>
+    <address>
+      <p>Phone: <a href="tel:5555555555">555-555-5555</a></p>
+      <p>Email: <a href="mailto:fake@email.com">fake@email.com</a></p>
+    </address>
+  </section>
+</footer>
