--- a/forms.html
+++ b/forms.html
@@ -2,5 +2,6 @@
 
 <form action="">
   <label for="email"> Email Address: </label>
-  <input type="email" id="email" />
+  <input type="email" id="email" placeholder="example@email.com" name="email" />
+  <button type="submit">Submit form</button>
 </form>
