--- a/forms.html
+++ b/forms.html
@@ -2,6 +2,14 @@
 
 <form action="">
   <label for="email"> Email Address: </label>
-  <input type="email" id="email" placeholder="example@email.com" name="email" />
+  <input
+    required
+    type="email"
+    id="email"
+    placeholder="example@email.com"
+    name="email"
+    minlength="5"
+    maxlength="64"
+  />
   <button type="submit">Submit form</button>
 </form>
