Example of video and audio subtitles for accessibility

--- a/video.html
+++ b/video.html
@@ -1,4 +1,4 @@
-//example of an iframe
+<!--example of an iframe -->
 
 <iframe
   width="400"
@@ -10,4 +10,4 @@
   allowfullscreen
 ></iframe>
 
-//allow attribute showed what the iframe can/cannot do
+<!--allow attribute showed what the iframe can/cannot do
