added tabindex tip to accessibility

--- a/accessibility.html
+++ b/accessibility.html
@@ -2,4 +2,13 @@
 <button accesskey="c">Cancel</button>
 <a href="index.html" accesskey="h">Home</a>
 
-<!--S to save, C to cancel, H to home->
+S to save, C to cancel, H to home 
+
+
+<element tabindex="number">Element Text</element>
+
+Example:
+<button>First</button>
+<div tabindex="0">Second</div>
+<a href="#">Third</a>
+<!--tabindex attribute allows keyboard users to navigate to elements using the tab key.
