added simple button template & css

--- a/accessibility.html
+++ b/accessibility.html
@@ -2,7 +2,7 @@
 <button accesskey="c">Cancel</button>
 <a href="index.html" accesskey="h">Home</a>
 
-S to save, C to cancel, H to home 
+<!--S to save, C to cancel, H to home-->
 
 
 <element tabindex="number">Element Text</element>
