--- a/Button/simplebutton.html
+++ b/Button/simplebutton.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="styles.css" />
+<link rel="stylesheet" href="stylesbutton.css" />
 
 <button class="regular-btn">Unstyled Button</button>
 <button class="round-btn">Round Button</button>
