--- a/CertProjects/bookinventory.html
+++ b/CertProjects/bookinventory.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Book Inventory</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="stylesbooks.css" />
   </head>
 
   <body>
