"Added folder City Skyline WS code"

--- a/CertProjects/productpage.html
+++ b/CertProjects/productpage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Cat Meowketplace</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="stylesproductpage.css">
   </head>
   <body>
     <div class="nav">
@@ -36,7 +36,7 @@
         <img src=""></img>
         </div>
       </div>
-      <form id="form" action="https://www.freecodecamp.com/email-submit"><h3>Get Our Mewsletter</h3>
+      <form id="form" action="https://www.freecodecamp.org/email-submit"><h3>Get Our Mewsletter</h3>
         <input type="email" id="email" name="email" placeholder="Enter your email address" />
         <input type="submit" id="submit" />
       </form>
