--- a/CertProjects/productpage.html
+++ b/CertProjects/productpage.html
@@ -5,7 +5,7 @@
     <title>Cat Meowketplace</title>
     <link rel="stylesheet" href="stylesproductpage.css">
   </head>
-  <body>
+  <bod>
     <div class="nav">
       <header id="header" class="header"><img id="header-img" src="https://cdn.dribbble.com/users/2792875/screenshots/10188287/cat_cafe_logo_01_4x.png"/><h3>Feline Fine Meowketplace</h3>
         <nav id="nav-bar">
